# libmsc

./: .clangd  .gitignore  BUILD.bazel  DESIGN.md  MODULE.bazel  README.adoc  alloc.h  arena.h  xmake.lua
libmsc/include/: msc_alg.h  msc_alloc.h  msc_arena.h
libmsc/src/: README.md  msc_alg.c  msc_arena.c
shaders/nk/: nk.frag  nk.vert
src/: alloc.c  alloc.h  arena.c  arena.h  error.h  main.c  msc.h  msc_arr.h  msc_rand.h  msc_rng.h  msca.h  msca_impl.c  mscc.h  stdafx.h  text.c  text.h
src/msc/: msc.h  msc_alg.c  msc_alg.h
src/msc/alloc/: alloc.c  alloc.h  arena.c  arena.h
src/msc/ds/: arr.c  arr.h
src/renderer/: renderer.c  renderer.h
src/renderer/nk_layer/: nk_layer.c  nk_layer.h  pipeline.c  pipeline.h
src/renderer/vk/: device.c  device.h  instance.c  instance.h  pipeline.c  pipeline.h
tests/msc_arr/: main.c  msc_arr_impl.c
tests/msc_rng/: main.c  msc_rng_impl.c
tests/msca/: main.c
