load("//tools/cc:defs.bzl", "c23_binary", "c23_library")

c23_library(
    name = "mscc",
    srcs = [
        "src/alloc.c",
        "src/arena.c",
        "src/text.c",
    ],
    hdrs = [
        "src/alloc.h",
        "src/arena.h",
        "src/error.h",
        "src/mscc.h",
        "src/text.h",
    ],
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "mscc_static",
    srcs = [":mscc"],
    output_group = "archive",
    visibility = ["//visibility:public"],
)

c23_binary(
    name = "mscc_shared",
    linkshared = True,
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [":mscc"],
)
