load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")

cc_library(
    name = "mscc",
    srcs = [
        "src/alloc.c",
        "src/arena.c",
        "src/text.c",
    ],
    hdrs = [
        "src/alloc.h",
        "src/arena.h",
        "src/error.h",
        "src/msc.h",
        "src/text.h",
    ],
    copts = ["-std=c23"],
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

filegroup(
    name = "mscc_static",
    srcs = [":mscc"],
    output_group = "archive",
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "mscc_shared",
    copts = ["-std=c23"],
    linkshared = True,
    linkstatic = True,
    visibility = ["//visibility:public"],
    deps = [":mscc"],
)
